--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '00 15 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "main" ,"docker-action"]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
