--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,8 +36,10 @@ jobs:
       fail-fast: false
       matrix:
         platform:
+          - linux/386
           - linux/amd64
           - linux/arm64
+          - linux/arm/v6
           - linux/arm/v7
     steps:
       - name: Prepare
