--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["avif-decoder"]
+default = ["avif-decoder","heif"]
 avif-decoder = ["dep:avif-decoder_dep"]
+heif = ["dep:libheif-rs-static"]
 
 [dependencies]
 tokio-stream = "*"
@@ -27,6 +28,8 @@ rexif = "0.7"
 avif-decoder_dep = { path="./avif-decoder_dep" ,optional = true }
 chrono = "0.4"
 fast_image_resize = "3.0"
+libheif-rs-static = { git = "https://github.com/kozakura913/libheif-rs-static.git", rev="a888cdaa7a21f6c111f711e0df58deb73879da3b" ,optional = true }
+#libheif-rs-static = { path = "libheif-rs-static" ,optional = true }
 
 [profile.release]
 strip = true
