--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["avif-decoder"]
+default = []
 avif-decoder = ["dep:avif-decoder_dep"]
 
 [dependencies]
