--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,7 +24,6 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -41,6 +40,11 @@ jobs:
           - linux/arm64
           - linux/arm/v6
           - linux/arm/v7
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
       - name: Prepare
         run: |
@@ -102,6 +106,11 @@ jobs:
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=min
+          push: true
+          tags: localhost:5000/media-proxy-rs:latest
+      - name: Inspect
+        run: |
+          docker buildx imagetools inspect localhost:5000/media-proxy-rs:latest
 
       - name: Export digest
         run: |
@@ -113,6 +122,22 @@ jobs:
         with:
           name: digests-${{ env.PLATFORM_PAIR }}
           path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+  upload:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Download digests
+        run: |
+          mkdir /tmp/app/
+          docker run --rm -t -v /tmp/app:/tmp/app localhost:5000/media-proxy-rs:latest cp /media-proxy-rs/media-proxy-rs /tmp/app/
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: media-proxy-rs_${{ env.PLATFORM_PAIR }}
+          path: /tmp/app/*
           if-no-files-found: error
           retention-days: 1
   merge:
