--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -58,6 +58,8 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -124,15 +126,25 @@ jobs:
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
+
   upload:
     runs-on: ubuntu-latest
     needs:
       - build
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+
       - name: Download digests
         run: |
           mkdir /tmp/app/
           docker run --rm -t -v /tmp/app:/tmp/app localhost:5000/media-proxy-rs cp /media-proxy-rs/media-proxy-rs /tmp/app/
+
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -140,6 +152,7 @@ jobs:
           path: /tmp/app/*
           if-no-files-found: error
           retention-days: 1
+
   merge:
     runs-on: ubuntu-latest
     if: ${{ github.event_name != 'pull_request' }}
