--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -110,15 +110,17 @@ jobs:
           cache-to: type=gha,mode=min
           push: true
           tags: localhost:5000/media-proxy-rs
-      - name: Inspect
-        run: |
-          docker buildx imagetools inspect localhost:5000/media-proxy-rs
 
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
+
+      - name: Inspect
+        run: |
+          docker buildx imagetools inspect localhost:5000/media-proxy-rs:${{ steps.build.outputs.digest }}
+
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -127,25 +129,12 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  upload:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-
-      - name: Download digests
+      - name: Extract Application
         run: |
           mkdir /tmp/app/
-          docker run --rm -t -v /tmp/app:/tmp/app localhost:5000/media-proxy-rs cp /media-proxy-rs/media-proxy-rs /tmp/app/
+          docker run --rm -t -v /tmp/app:/tmp/app localhost:5000/media-proxy-rs:${{ steps.build.outputs.digest }} cp /media-proxy-rs/media-proxy-rs /tmp/app/
 
-      - name: Upload digest
+      - name: Upload Application
         uses: actions/upload-artifact@v4
         with:
           name: media-proxy-rs_${{ env.PLATFORM_PAIR }}
