--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,11 +40,6 @@ jobs:
           - linux/arm64
           - linux/arm/v6
           - linux/arm/v7
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
       - name: Prepare
         run: |
@@ -108,8 +103,6 @@ jobs:
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=min
-          push: true
-          tags: localhost:5000/media-proxy-rs
 
       - name: Export digest
         run: |
@@ -119,7 +112,7 @@ jobs:
 
       - name: Inspect
         run: |
-          docker buildx imagetools inspect localhost:5000/media-proxy-rs:${{ steps.build.outputs.digest }}
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
@@ -132,12 +125,12 @@ jobs:
       - name: Extract Application
         run: |
           mkdir /tmp/app/
-          docker run --rm -t -v /tmp/app:/tmp/app localhost:5000/media-proxy-rs:${{ steps.build.outputs.digest }} cp /media-proxy-rs/media-proxy-rs /tmp/app/
+          docker run --rm -t -v /tmp/app:/tmp/app ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} cp /media-proxy-rs/media-proxy-rs /tmp/app/
 
       - name: Upload Application
         uses: actions/upload-artifact@v4
         with:
-          name: media-proxy-rs_${{ env.PLATFORM_PAIR }}
+          name: ${{ env.REGISTRY_IMAGE }}_${{ env.PLATFORM_PAIR }}
           path: /tmp/app/*
           if-no-files-found: error
           retention-days: 1
