--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '00 15 * * *'
   push:
-    branches: [ "main","bin" ]
+    branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
@@ -110,10 +110,9 @@ jobs:
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
 
-      - name: Inspect
-        if: ${{ github.event_name != 'pull_request' }}
+      - name: Image List
         run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker image ls
 
       - name: Upload digest
         uses: actions/upload-artifact@v4
@@ -124,14 +123,12 @@ jobs:
           retention-days: 1
 
       - name: Extract Application
-        if: ${{ github.event_name != 'pull_request' }}
         run: |
           mkdir /tmp/app/
           docker run --rm -t -v /tmp/app:/tmp/app ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} cp /media-proxy-rs/media-proxy-rs /tmp/app/
 
       - name: Upload Application
         uses: actions/upload-artifact@v4
-        if: ${{ github.event_name != 'pull_request' }}
         with:
           name: ${{ env.REGISTRY_IMAGE }}_${{ env.PLATFORM_PAIR }}
           path: /tmp/app/*
