--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -141,7 +141,7 @@ jobs:
       - name: Upload Application
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.REGISTRY_IMAGE }}_${{ env.PLATFORM_PAIR }}
+          name: media-proxy-rs_${{ env.PLATFORM_PAIR }}
           path: /tmp/app/*
           if-no-files-found: error
           retention-days: 1
