--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: '00 15 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "bin" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
@@ -137,14 +137,25 @@ jobs:
           mkdir /tmp/app/
           chmod o+rwx /tmp/app/
           docker run --rm -t -v /tmp/app:/tmp/app ${{ github.repository }}:latest cp /media-proxy-rs/media-proxy-rs /tmp/app/
+          gzip -k /tmp/app/media-proxy-rs
 
       - name: Upload Application
         uses: actions/upload-artifact@v4
         with:
           name: media-proxy-rs_${{ env.PLATFORM_PAIR }}
-          path: /tmp/app/*
+          path: /tmp/app/media-proxy-rs
           if-no-files-found: error
           retention-days: 1
+      - name: Upload release
+        uses: WebFreak001/deploy-nightly@v3.1.0
+        with:
+          upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/192614126/assets{?name,label} # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and copy the full "upload_url" value including the {?name,label} part
+          release_id: 192614126 # same as above (id can just be taken out the upload_url, it's used to find old releases)
+          asset_path: /tmp/app/media-proxy-rs.gz # path to archive to upload
+          asset_name: media-proxy-rs_${{ env.PLATFORM_PAIR }}_$$.gz # name to upload the release as, use $$ to insert date (YYYYMMDD) and 6 letter commit hash
+          asset_content_type: application/gzip # required by GitHub API
+          max_releases: 7 # optional, if there are more releases than this matching the asset_name, the oldest ones are going to be deleted
+          ignore_hash: true
 
   merge:
     runs-on: ubuntu-latest
