--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -93,27 +93,28 @@ jobs:
               "dav1d-libs": "/dav1d_bin"
             }
           skip-extraction: ${{ steps.cache.outputs.cache-hit }}
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+
+      - name: Build and Export
         id: build
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
+          outputs: type=docker,dest=${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
+          tags: ${{ github.repository }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=min,scope=platform-${{ env.PLATFORM_PAIR }}
-
-      - name: Build and export to Docker
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+      - name: Build and push Docker image
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          load: true
-          outputs: type=docker,dest=${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
-          tags: ${{ github.repository }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           cache-from: type=gha
           cache-to: type=gha,mode=min,scope=platform-${{ env.PLATFORM_PAIR }}
 
@@ -138,7 +139,6 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name != 'pull_request' }}
     permissions:
       contents: write
       id-token: write
@@ -179,6 +179,7 @@ jobs:
         run: |
           gzip -k media-proxy-rs
       - name: Upload release
+        if: ${{ github.repository == 'yojo-art/media-proxy-rs' }}
         uses: WebFreak001/deploy-nightly@v3.2.0
         with:
           upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/192617419/assets{?name,label} # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and copy the full "upload_url" value including the {?name,label} part
@@ -214,13 +215,26 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: dockerimage
+          name: ${{ env.PLATFORM_PAIR }}
           path: ${{ runner.temp }}
       - name: Load image
         run: |
-          docker load --input ${{ runner.temp }}/dockerimage.tar
+          docker load --input ${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
+      - name: App Start
+        run: |
           docker image ls -a
-
+          docker run --rm --platform ${{ matrix.platform }} ${{ env.PLATFORM_PAIR }}
+      - uses: mfinelli/setup-imagemagick@v6
+        run: magick asset/dummy.png -resize 512x512 ${{ runner.temp }}/http/jpeg.jpg
+      - name: Http Server
+        uses: Eun/http-server-action@v1
+        with:
+          directory: ${{ runner.temp }}/http
+          port: 8080
+        run: |
+          cd ${{ runner.temp }}
+          curl -O http://localhost:8080/jpeg.jpg
+          ls && exit 1
   merge:
     runs-on: ubuntu-latest
     if: ${{ github.event_name != 'pull_request' }}
