--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -163,6 +163,10 @@ jobs:
         with:
           name: ${{ env.PLATFORM_PAIR }}
           path: ${{ runner.temp }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          image: public.ecr.aws/vend/tonistiigi/binfmt:latest
       - name: Load image
         run: |
           docker load --input ${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
@@ -221,6 +225,14 @@ jobs:
         run: |
           docker load --input ${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
           docker image ls -a
+      - name: Load image
+        run: |
+          docker run --platform ${{ matrix.platform }} ${{ github.repository }}:latest
+      - uses: mfinelli/setup-imagemagick@v6
+        run: magick asset/dummy.png -resize 512x512 ${{ runner.temp }}/http/jpeg.jpg
+      - name: Load image
+        run: |
+          curl -vv -O http://localhost:12766/test.webp
 
   merge:
     runs-on: ubuntu-latest
