--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -225,9 +225,6 @@ jobs:
         run: |
           docker load --input ${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
           docker image ls -a
-      - name: Run App
-        run: |
-          docker run --platform ${{ matrix.platform }} ${{ github.repository }}:latest
       - name: Setup ImageMagick
         uses: mfinelli/setup-imagemagick@v6
       - name: Setup Source Images
@@ -239,6 +236,9 @@ jobs:
           magick asset/dummy.png ${{ runner.temp }}/http/jpeg2000.jp2
           magick asset/dummy.png ${{ runner.temp }}/http/avif.avif
           magick asset/dummy.png ${{ runner.temp }}/http/tiff.tiff
+      - name: Run App
+        run: |
+          docker run -d --platform ${{ matrix.platform }} ${{ github.repository }}:latest
       - name: Curl Test
         run: |
           curl -vv -O http://localhost:12766/test.webp
