--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -214,6 +214,10 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            asset/dummy.png
+          sparse-checkout-cone-mode: false
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -231,6 +235,7 @@ jobs:
         uses: mfinelli/setup-imagemagick@v6
       - name: Setup Source Images
         run: |
+          ls .
           mkdir ${{ runner.temp }}/http
           magick asset/dummy.png -resize 512x512 ${{ runner.temp }}/http/jpeg.jpg
           magick asset/dummy.png ${{ runner.temp }}/http/static.webp
