--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -103,7 +103,7 @@ jobs:
           outputs: type=docker,dest=${{ runner.temp }}/${{ env.PLATFORM_PAIR }}.tar
           tags: ${{ github.repository }}:latest
           cache-from: type=gha
-          cache-to: type=gha,mode=min,scope=platform-${{ env.PLATFORM_PAIR }}
+          cache-to: type=gha,mode=max,scope=platform-${{ env.PLATFORM_PAIR }}
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
