--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -248,7 +248,7 @@ jobs:
           magick asset/dummy.png ${{ runner.temp }}/http/tiff.tiff
       - name: Run App
         run: |
-          docker run -d --platform ${{ matrix.platform }} ${{ github.repository }}:latest
+          docker run -d -p 12766:12766 --platform ${{ matrix.platform }} ${{ github.repository }}:latest
       - name: Curl Test
         run: |
           sleep 10
