--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -239,20 +239,50 @@ jobs:
       - name: Setup Source Images
         run: |
           mkdir ${{ runner.temp }}/http
-          magick asset/dummy.png -resize 512x512 ${{ runner.temp }}/http/jpeg.jpg
+          magick asset/dummy.png -resize 512x512 ${{ runner.temp }}/http/png.png
+          magick asset/dummy.png ${{ runner.temp }}/http/jpeg.jpg
+          magick asset/dummy.png ${{ runner.temp }}/http/gif.gif
+          magick -loop 0 -delay 300x1000 "asset/dummy.png" -delay 100x1000 "asset/dummy.png" ${{ runner.temp }}/http/anim.gif
           magick asset/dummy.png ${{ runner.temp }}/http/static.webp
           magick -loop 0 -delay 300x1000 "asset/dummy.png" -delay 100x1000 "asset/dummy.png" ${{ runner.temp }}/http/anim.webp
           magick asset/dummy.png ${{ runner.temp }}/http/jpeg-xr.jxr
+          magick asset/dummy.png ${{ runner.temp }}/http/jpeg-xl.jxl
           magick asset/dummy.png ${{ runner.temp }}/http/jpeg2000.jp2
           magick asset/dummy.png ${{ runner.temp }}/http/avif.avif
           magick asset/dummy.png ${{ runner.temp }}/http/tiff.tiff
+          magick asset/dummy.png ${{ runner.temp }}/http/tga.tga
+          magick asset/dummy.png ${{ runner.temp }}/http/icon.ico
       - name: Run App
         run: |
           docker run -d -p 12766:12766 --platform ${{ matrix.platform }} ${{ github.repository }}:latest
+      - name: Serve Files
+        uses: Eun/http-server-action@v1
+        with:
+          directory: ${{ runner.temp }}/http
+          port: 8080
+          allowed-methods: |
+            ["GET", "HEAD"]
+          content-types: |
+            {
+              "png": "image/png",
+              "jpg": "image/jpeg",
+              "jpeg": "image/jpeg",
+              "gif": "image/gif",
+              "webp": "image/webp",
+              "jxr": "image/vnd.ms-photo",
+              "jxl": "image/jxl",
+              "jp2": "image/jp2",
+              "avif": "image/avif",
+              "tiff": "image/tiff",
+              "tga": "image/x-tga",
+              "ico": "image/x-icon",
+              "txt": "text/plain"
+            }
       - name: Curl Test
         run: |
           sleep 10
-          curl -vv -O http://localhost:12766/test.webp
+          ls ${{ runner.temp }}/http
+          curl -vv -O http://localhost:12766/test.webp?url=http://localhost:8080/jpeg-xr.jxr
 
   merge:
     runs-on: ubuntu-latest
