--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -256,34 +256,11 @@ jobs:
       - name: Run App
         run: |
           docker run -d -p 12766:12766 --platform ${{ matrix.platform }} ${{ github.repository }}:latest
-      - name: Serve Files
-        uses: Eun/http-server-action@v1
-        with:
-          directory: ${{ runner.temp }}/http
-          port: 8080
-          allowed-methods: |
-            ["GET", "HEAD"]
-          content-types: |
-            {
-              "png": "image/png",
-              "jpg": "image/jpeg",
-              "jpeg": "image/jpeg",
-              "gif": "image/gif",
-              "webp": "image/webp",
-              "jxr": "image/vnd.ms-photo",
-              "jxl": "image/jxl",
-              "jp2": "image/jp2",
-              "avif": "image/avif",
-              "tiff": "image/tiff",
-              "tga": "image/x-tga",
-              "ico": "image/x-icon",
-              "exr": "image/x-exr",
-              "txt": "text/plain"
-            }
+          docker run -d -p 8080:80 -v ${{ runner.temp }}/http:/usr/share/nginx/html public.ecr.aws/nginx/nginx:stable-alpine
       - name: Curl Test
         run: |
           sleep 10
-          ls ${{ runner.temp }}/http
+          ls ${{ runner.temp }}/http | xargs -I{} curl http://localhost:8080/{}
           curl -vv http://localhost:12766/test.webp?url=http%3A%2F%2Flocalhost%3A8080%2Fjpeg-xr.jxr | cat
 
   merge:
