--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -266,7 +266,7 @@ jobs:
           mkdir ${{ runner.temp }}/result
           ls ${{ runner.temp }}/http | xargs -I{} bash -c "curl -vvo ${{ runner.temp }}/result/{}.webp http://localhost:12766/test.webp?url=http%3A%2F%2Fnginx%2F{}"
           #空のファイルがあると失敗する
-          ls ${{ runner.temp }}/result | xargs -I{} test -s {}
+          ls ${{ runner.temp }}/result | xargs -I{} test -s ${{ runner.temp }}/result/{}
 
   merge:
     runs-on: ubuntu-latest
